<resources>

    <string name="app_name">Cue Lift</string>

    <string name="add_lift_hint">Add a lift!</string>

    <string name="action_settings">Settings</string>

    <string name="generic_title">Generic Title</string>
    <string name="generic_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lacinia purus ex. In tristique tempus pellentesque. Proin eu condimentum tellus, eget tempor ex. Ut leo sem, scelerisque sit amet dui vitae, sagittis placerat turpis. Sed sit amet vestibulum quam, vel luctus mi. Sed a orci non neque mollis laoreet. Fusce nulla tellus, placerat nec lectus ut, tempus posuere dolor.</string>

    <string name="your_lifts">Your Lifts</string>
    <string name="delete_lifts">Delete</string>

    <!-- LiftListFragment -->
    <string name="lift_detail">PRW: %1$d, PRV: %2$d</string>

    <!-- LiftFragment -->
    <string name="lift_icon_description">Icon of Lift</string>
    <string name="lift_name">Lift Name</string>

    <string name="personal_records">Personal Records</string>
    <string name="weight_pr">Max Weight Lifted: %1$d</string>
    <string name="volume_pr">Max Volume Lifted: %1$d</string>

    <string name="todays_lifts">Most Recent Lifts</string>
    <string name="last_days_lifts">Previous Day\'s Lifts</string>
    <string name="date">Date</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>

    <string name="lift_cues">Lift Cues</string>
    <string name="add_cue">Add Cue (Limit 255 Chars)</string>
    <string name="cannot_delete_cue">Cannot delete this cue - this app is broken :(</string>
    <string name="cannot_delete_set">Cannot delete this set - this app is broken :(</string>

    <string name="today">Today</string>
    <string name="x_reps">%1$d Reps</string>
    <string name="pounds">lbs.</string>
    <string name="set_date">Date</string>
    <string name="set_reps">Reps</string>
    <string name="set_weight">Weight</string>
    <string name="choose_lift_icon">Choose a picture for this lift</string>

    <string name="prv_toast">Nice, new volume PR!</string>
    <string name="prw_toast">Nice, new weight PR!</string>

</resources>
