<?xml version="1.0" encoding="utf-8"?>

<!--
Ideas:
[Picture of Lift] [Name of Lift] [Edit]
[Personal Best] [Best Options: Volume, Weight]
[Data From Today's Workout]
[Data From Last Workout]
[Data From Workout Before Last]
[Workout Date] [Reps] [Weight] [Add]
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/lift_fragment_margin"
            android:layout_marginRight="@dimen/lift_fragment_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/lift_fragment_margin"
                android:layout_marginTop="@dimen/lift_fragment_margin">

                <ImageButton
                    android:id="@+id/lift_icon_image_button"
                    android:layout_width="@dimen/list_view_icon_side_len"
                    android:layout_height="@dimen/list_view_icon_side_len"
                    android:src="@drawable/ic_fitness_center_black"
                    android:contentDescription="@string/lift_icon_description"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/lift_name_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/lift_name"
                        android:textSize="@dimen/lift_icon_title_size"
                        android:text="@string/generic_title"
                        android:focusable="false"
                        android:singleLine="true"
                        android:ellipsize="start"
                        android:inputType="textCapCharacters" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout android:id="@+id/pr_linear_layout"
                style="@style/VerticalLinearLayout">

                <TextView
                    android:text="@string/personal_records"
                    style="@style/ListSeparator" />

                <TextView android:id="@+id/lift_pr_weight_text_view"
                    style="@style/LiftInfo"
                    android:text="@string/weight_pr"/>

                <TextView android:id="@+id/lift_pr_volume_text_view"
                    style="@style/LiftInfo"
                    android:text="@string/volume_pr"/>

            </LinearLayout>

            <LinearLayout android:id="@+id/today_linear_layout"
                style="@style/VerticalLinearLayout">

                <TextView
                    style="@style/ListSeparator"
                    android:text="@string/todays_lifts"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- date, reps, weigth-->

                    <TableRow>
                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="date"/>
                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="reps"/>
                        <TextView
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="weight"/>
                    </TableRow>

                </TableLayout>

            </LinearLayout>

            <LinearLayout android:id="@+id/last_day_linear_layout"
                style="@style/VerticalLinearLayout">

                <TextView
                    style="@style/ListSeparator"
                    android:text="@string/last_days_lifts" />

            </LinearLayout>

            <LinearLayout android:id="@+id/cues_linear_layout"
                style="@style/VerticalLinearLayout">

                <TextView
                    style="@style/ListSeparator"
                    android:text="@string/lift_cues"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>



</ScrollView>

